--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ OpenLinksInNewWindow = true
 
   [[params.nav]]
   name = "structural"
-  tag = "music"
+  tag = "structural"
   icon = "headphones"
 
   [[params.nav]]
