links.yml: changed

--- a/themes/slate/exampleSite/data/links.yml
+++ b/themes/slate/exampleSite/data/links.yml
@@ -2,7 +2,7 @@ tiles:
 -
   name: "google"
   url: "https://google.com"
-  img: "logos/google.svg"
+  img: "logos/in.jpg"
   tags: ["favorite", "search"]
 -
   name: "bing"
