links.yml: changed

--- a/themes/slate/exampleSite/data/links.yml
+++ b/themes/slate/exampleSite/data/links.yml
@@ -1,7 +1,7 @@
 tiles:
 -
   name: "incode"
-  url: "https://google.com"
+  url: "https://incode.com.au"
   img: "logos/in.png"
   tags: ["favorite", "search"]
 -
